<resources>
    <string name="app_name">APPrende</string>
    <string name="AppID">102058556843013</string>
    <string name="welcome">Welcome to</string>
    <string name="username">Username or email</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="login">LOG IN</string>
    <string name="or">or</string>
    <string name="Info">Your baby will begin an endless journey through reading!</string>
    <string name="insert">Please insert your personal data in the boxes</string>
    <string name="google">Iniciar sesión con Google</string>
    <string name="SO">Salir</string>
    <string name="saludo">Hello!</string>
    <string name="signed_int_fmt">%s</string>
    <string name="title_activity_after_splash">afterSplash</string>
    <string name="texto1">it´s so easy</string>
    <string name="texto2">Learn with bits</string>
    <string name="texto3">Simple plan</string>
    <string name="textButtonStart">Start</string>
    <string name="msgFelicidad">¡CONGRATULATIONS!</string>
    <string name="msgBtn"> ADD CHILD</string>
    <string name="msgTitle">KIDS</string>
    <string name="New">+ New!</string>
    <string name="RegistKid">You are registering your child. Please insert the information requested below</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="date">Date</string>
    <string name="language">Language</string>
    <string name="time">Time</string>
    <string name="finish">Finish</string>
    <string-array name="kidsex">
        <item>Girl</item>
        <item>Boy</item>
    </string-array>
    <string-array name="languages">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="star1">STAR1</string>
    <string name="star2">STAR2</string>
    <string name="star3">STAR3</string>
    <string name="star4">STAR4</string>
    <string name="star5">STAR5</string>
    <string name="star6">STAR6</string>
    <string name="star7">STAR7</string>
    <string name="star8">STAR8</string>
    <string name="star9">STAR9</string>
    <string name="star10">STAR10</string>
    <string name="star11">STAR11</string>
    <string name="star12">STAR12</string>
    <string-array name="animales1">
        <item>EAGLE</item>
        <item>VULTURE</item>
        <item>CONDOR</item>
        <item>FALCON</item>
        <item>BUZZARD</item>
    </string-array>
    <string-array name="animales2">
        <item>DONKEY</item>
        <item>PONY</item>
        <item>ZEBRA</item>
        <item>HORSE</item>
        <item>MULE</item>
    </string-array>
    <string-array name="animales3">
        <item>DEER</item>
        <item>ANTELOPE</item>
        <item>GAZELLE</item>
        <item>REINDEER</item>
        <item>MOOSE</item>
    </string-array>
    <string-array name="animales4">
        <item>EEL</item>
        <item>CLAMS</item>
        <item>MUSSEL</item>
        <item>OYSTER</item>
        <item>LEECH</item>
    </string-array>
    <string-array name="animales5">
        <item>SHRIMP</item>
        <item>CRAB</item>
        <item>PRAWN</item>
        <item>LOBSTER</item>
        <item>STARFISH</item>
    </string-array>
    <string-array name="animales6">
        <item>ANCHOVY</item>
        <item>COD</item>
        <item>HERRING</item>
        <item>TUNA</item>
        <item>MACKEREL</item>
    </string-array>
    <string-array name="animales7">
        <item>SOLE</item>
        <item>SWORDFISH</item>
        <item>SALMON</item>
        <item>SARDINE</item>
        <item>TROUT</item>
    </string-array>
    <string-array name="animales8">
        <item>FERRET</item>
        <item>WEASEL</item>
        <item>MINK</item>
        <item>SKUNK</item>
        <item>BADGER</item>
    </string-array>
    <string-array name="animales9">
        <item>OSTRICH</item>
        <item>CRANE</item>
        <item>PELICAN</item>
        <item>FLAMINGO</item>
        <item>STORK</item>
    </string-array>
    <string-array name="animales10">
        <item>WHALE</item>
        <item>DOLPHIN</item>
        <item>SHARK</item>
        <item>RAY</item>
        <item>MANATEE</item>
    </string-array>
    <string-array name="animales11">
        <item>SPIDER</item>
        <item>CICADA</item>
        <item>SCORPION</item>
        <item>CRICKET</item>
        <item>GRASSHOPPER</item>
    </string-array>
    <string-array name="animales12">
        <item>LADYBIRD</item>
        <item>FLEA</item>
        <item>TICK</item>
        <item>BEDBUG</item>
        <item>BEETLE</item>
    </string-array>
    <string-array name="animales13">
        <item>LARK</item>
        <item>CUCKOO</item>
        <item>SWALLOW</item>
        <item>PARAKEET</item>
        <item>TOUCAN</item>
    </string-array>
    <string-array name="animales14">
        <item>GORILLA</item>
        <item>BABOON</item>
        <item>MONKEY</item>
        <item>DRILL</item>
        <item>CHIMPANZEE</item>
    </string-array>
    <string-array name="animales15">
        <item>COCKATOO</item>
        <item>PARROT</item>
        <item>HUMMINGBIRD</item>
        <item>QUAIL</item>
        <item>ROADRUNNER</item>
    </string-array>
    <string-array name="animales16">
        <item>SLUG</item>
        <item>SNAIL</item>
        <item>WORM</item>
        <item>EARTHWORM</item>
        <item>CARTEPILLAR</item>
    </string-array>
    <string-array name="animales17">
        <item>SPARROW</item>
        <item>MAGPIE</item>
        <item>GOLDFINCH</item>
        <item>WOODPECKER</item>
        <item>PHEASANT</item>
    </string-array>
    <string-array name="animales18">
        <item>BEAVER</item>
        <item>GROUNDHOG</item>
        <item>OTTER</item>
        <item>SQUIRREL</item>
        <item>RACOON</item>
    </string-array>
    <string-array name="animales19">
        <item>ROBIN</item>
        <item>CANARY</item>
        <item>BLACKBIRD</item>
        <item>NIGHTINGALE</item>
        <item>PARTRIDGE</item>
    </string-array>
    <string-array name="animales20">
        <item>PORCUPINE</item>
        <item>HEDGEHOG</item>
        <item>MOLE</item>
        <item>MOUSE</item>
        <item>RAT</item>
    </string-array>
    <string-array name="animales21">
        <item>PIGEON</item>
        <item>CROW</item>
        <item>OWL</item>
        <item>BAT</item>
        <item>SEAGULL</item>
    </string-array>
    <string-array name="animales22">
        <item>LIZARD</item>
        <item>NEWT</item>
        <item>MANTELLA</item>
        <item>FROG</item>
        <item>SALAMANDER</item>
    </string-array>
    <string-array name="animales23">
        <item>HIPPOPOTAMUS</item>
        <item>RHINO</item>
        <item>GIRAFFE</item>
        <item>KANGAROO</item>
        <item>ELEPHANT</item>
    </string-array>
    <string-array name="animales24">
        <item>SWAN</item>
        <item>MALLARD</item>
        <item>PINTAIL</item>
        <item>GOOSE</item>
        <item>PENGUIN</item>
    </string-array>
    <string-array name="animales25">
        <item>BULL</item>
        <item>COW</item>
        <item>CALF</item>
        <item>OX</item>
        <item>BUFFALO</item>
    </string-array>
    <string-array name="animales26">
        <item>BOA</item>
        <item>ANACONDA</item>
        <item>PYTHON</item>
        <item>COBRA</item>
        <item>RATTLESNAKE</item>
    </string-array>
    <string-array name="animales27">
        <item>BEAR</item>
        <item>ANTEATER</item>
        <item>SLOTH</item>
        <item>PANDA</item>
        <item>POLAR BEAR</item>
    </string-array>
    <string-array name="animales28">
        <item>DALMATIAN</item>
        <item>PUG</item>
        <item>BEAGLE</item>
        <item>CHOW-CHOW</item>
        <item>COLLIE</item>
    </string-array>
    <string-array name="animales29">
        <item>GOAT</item>
        <item>LLAMA</item>
        <item>SHEEP</item>
        <item>CAMEL</item>
        <item>DROMEDARY</item>
    </string-array>
    <string-array name="animales30">
        <item>HEN</item>
        <item>COCK</item>
        <item>TURKEY</item>
        <item>PEACOCK</item>
        <item>CHICK</item>
    </string-array>
    <string-array name="animales31">
        <item>ALLIGATOR</item>
        <item>CROCODRILLE</item>
        <item>TURTLE</item>
        <item>CHAMALEON</item>
        <item>IGUANA</item>
    </string-array>
    <string-array name="animales32">
        <item>PANTHER</item>
        <item>COUGAR</item>
        <item>JAGUAR</item>
        <item>LEOPARD</item>
        <item>CHEETAH</item>
    </string-array>
    <string-array name="animales33">
        <item>BEE</item>
        <item>WASP</item>
        <item>FLY</item>
        <item>FIREFLY</item>
        <item>MIDGE</item>
    </string-array>
    <string-array name="animales34">
        <item>GNAT</item>
        <item>DRAGONFLY</item>
        <item>BUTTERFLY</item>
        <item>MOTH</item>
        <item>DAMSELFLY</item>
    </string-array>
    <string-array name="animales35">
        <item>CENTIPEDE</item>
        <item>COCKROACH</item>
        <item>ANT</item>
        <item>TERMINTES</item>
        <item>EARWIGS</item>
    </string-array>
    <string-array name="animales36">
        <item>SQUID</item>
        <item>JELLYFISH</item>
        <item>OCTOPUS</item>
        <item>SEAL</item>
        <item>WALRUS</item>
    </string-array>
    <string-array name="animales37">
        <item>KOALA</item>
        <item>LEMUR</item>
        <item>WOMBAT</item>
        <item>BINTURONG</item>
        <item>RATEL</item>
    </string-array>
    <string-array name="animales38">
        <item>PIG</item>
        <item>TAPIR</item>
        <item>HOG</item>
        <item>WARTHOG</item>
        <item>TAMANDUA</item>
    </string-array>
    <string-array name="animales39">
        <item>JACKAL</item>
        <item>HYENA</item>
        <item>WOLF</item>
        <item>FOX</item>
        <item>DHOLE</item>
    </string-array>
    <string-array name="animales40">
        <item>LION</item>
        <item>TIGER</item>
        <item>LYNX</item>
        <item>SERVAL</item>
        <item>OCELOT</item>
    </string-array>
    <string-array name="animales41">
        <item>RABBIT</item>
        <item>HARE</item>
        <item>MEERKAT</item>
        <item>AGOUTI</item>
        <item>CAPYBARA</item>
    </string-array>
    <string-array name="comida1">
        <item>BACON</item>
        <item>BEEF</item>
        <item>CHICKEN</item>
        <item>DUCK</item>
        <item>HAM</item>
    </string-array>
    <string-array name="comida2">
        <item>BUTTER</item>
        <item>CREAM</item>
        <item>CHEESE</item>
        <item>EGG</item>
        <item>MILK</item>
    </string-array>
    <string-array name="comida3">
        <item>LAMB</item>
        <item>SALAMI</item>
        <item>SAUSAGES</item>
        <item>PORK</item>
        <item>VEAL</item>
    </string-array>
    <string-array name="comida4">
        <item>APPLE</item>
        <item>BANANA</item>
        <item>BLACKCURRANT</item>
        <item>CHERRY</item>
        <item>FIG</item>
    </string-array>
    <string-array name="comida5">
        <item>CAKE</item>
        <item>QUICHE</item>
        <item>CUPCAKE</item>
        <item>COOKIE</item>
        <item>BROWNIE</item>
    </string-array>
    <string-array name="comida6">
        <item>APRICOT</item>
        <item>BLACKBERRY</item>
        <item>BLUEBERRY</item>
        <item>COCONUT</item>
        <item>GOOSEBERRY</item>
    </string-array>
    <string-array name="comida7">
        <item>SUGAR</item>
        <item>CORNFLOUR</item>
        <item>SALT</item>
        <item>PEPPER</item>
        <item>flour</item>
    </string-array>
    <string-array name="comida8">
        <item>GRAPE</item>
        <item>GRAPEFRUIT</item>
        <item>LEMON</item>
        <item>MANGO</item>
        <item>MELON</item>
    </string-array>
</resources>