<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebas.login.premio"
    android:id="@+id/animation_layout"
    >

    <ImageView
        android:id="@+id/star1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star1"
        android:padding="3dp"
        android:src="@drawable/star5" />
    <ImageView
        android:id="@+id/star2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star2"
        android:padding="3dp"
        android:src="@drawable/star5" />
    <ImageView
        android:id="@+id/star3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star3"
        android:padding="3dp"
        android:src="@drawable/star5" />
    <ImageView
        android:id="@+id/star4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star4"
        android:padding="3dp"
        android:src="@drawable/star5" />
    <ImageView
        android:id="@+id/star5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star5"
        android:padding="3dp"
        android:src="@drawable/star5" />
   <!--
    <ImageView
        android:id="@+id/star6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star6"
        android:padding="3dp"
        android:src="@drawable/star5" />
   -->
    <ImageView
        android:id="@+id/star7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star7"
        android:src="@drawable/star4" />
    <ImageView
        android:id="@+id/star8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star8"
        android:src="@drawable/star4" />
    <ImageView
        android:id="@+id/star9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star9"
        android:src="@drawable/star4" />
    <ImageView
        android:id="@+id/star10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star10"
        android:src="@drawable/star4" />
    <ImageView
        android:id="@+id/star11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star11"
        android:src="@drawable/star4" />
    <ImageView
        android:id="@+id/star12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/star12"
        android:src="@drawable/star4" />

    <TextView
        android:id="@+id/idTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:textSize="30dp"
        android:elevation="80dp"
        android:textColor="@color/black"
        android:shadowColor="@color/gray"
        android:text="@string/msgFelicidad"
        />

</RelativeLayout>
