<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebas.login.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/steelblue"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:id="@+id/tWelcome"
            android:text="@string/welcome" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_height="wrap_content"
            android:src="@drawable/aprende"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/steelblue"
            android:layout_marginRight="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginBottom="30sp"
            android:text="@string/Info"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="16sp"
            android:layout_marginLeft="16sp"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:id="@+id/eUser"
            android:layout_marginBottom="1sp"
            android:background="@color/whitesmoke"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginRight="16sp"
            android:layout_marginLeft="16sp"
            android:layout_height="50sp"
            android:id="@+id/ePass"
            android:paddingLeft="10dp"
            android:hint="@string/password"
            android:background="@color/whitesmoke"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20sp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_marginRight="16sp"
                android:layout_marginLeft="16sp"
                android:layout_height="50sp"
                android:background="@color/steelblue"
                android:id="@+id/bSign"
                android:textSize="25sp"
                android:text="@string/signin"
                android:textColor="@color/whitesmoke"
                />
            <TextView
                android:id="@+id/tor"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_marginRight="16sp"
                android:layout_marginLeft="16sp"
                android:layout_height="35sp"
                android:textSize="25sp"
                android:textColor="@color/steelblue"
                android:text="@string/or"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_marginRight="16sp"
                android:layout_marginLeft="16sp"
                android:layout_height="50sp"
                android:background="@color/steelblue"
                android:id="@+id/bLog"
                android:textSize="25sp"
                android:text="@string/login"
                android:textColor="@color/whitesmoke"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginRight="16sp"
            android:layout_marginLeft="16sp"
            >
            <com.facebook.login.widget.LoginButton
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="5"
                android:id="@+id/fblogin_button"
                android:textSize="30sp"
                android:background="@color/steelblue" />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/GLoginButton"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="5"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
